...
  late TextEditingController _controller;
  late FocusNode _focusNode;

  final List<String> famousCities = [
    "Delhi",
    "New York",
    "Tokyo",
    "London",
    "Paris",
  ];

  @override
  void initState() {
...
  void onSubmitted() {
    _focusNode.unfocus();
    String cityName = _controller.text.trim();
    if (cityName.length < 3) {
      ScaffoldMessenger.of(context).showSnackBar(
        SnackBar(
          content: Text("Please enter a valid city name"),
          behavior: SnackBarBehavior.floating,
          backgroundColor: Theme.of(context).colorScheme.primary,
        ),
      );
      return;
    }
...
